// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Code span basic, positive 1`] = `
Object {
  "buffer": "/**[n] * line [c]1[c][n] * line [c] 2[c] sdf[n] */",
  "gaps": Array [],
  "lines": Array [
    "line [c]1[c]",
    "line [c] 2[c] sdf",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "line ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "1",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "line ",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": " 2",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " sdf",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`00 Code span basic, positive 2`] = `
Object {
  "buffer": "/**[n] * M[c]&[c]M[n] */",
  "gaps": Array [],
  "lines": Array [
    "M[c]&[c]M",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "M",
                  },
                ],
              },
              Object {
                "kind": "CodeSpan",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: CodeSpan_OpeningDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_Code",
                    "nodeExcerpt": "&",
                  },
                  Object {
                    "kind": "Excerpt: CodeSpan_ClosingDelimiter",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "M",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`01 Code span basic, negative 1`] = `
Object {
  "buffer": "/**[n] * [c]multi[n] * line[c][n] */",
  "gaps": Array [],
  "lines": Array [
    "[c]multi",
    "line[c]",
  ],
  "logMessages": Array [
    "(2,4): The code span is missing its closing backtick",
    "(3,8): The code span is missing its closing backtick",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "[c]",
                "errorMessage": "The code span is missing its closing backtick",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "multi",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "line",
                  },
                ],
              },
              Object {
                "errorLocation": "[c]",
                "errorLocationPrecedingToken": "line",
                "errorMessage": "The code span is missing its closing backtick",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`01 Code span basic, negative 2`] = `
Object {
  "buffer": "/**[n] * [c][c][n] */",
  "gaps": Array [],
  "lines": Array [
    "[c][c]",
  ],
  "logMessages": Array [
    "(2,4): A code span must contain at least one character between the backticks",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "[c][c]",
                "errorMessage": "A code span must contain at least one character between the backticks",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`03 Code fence, positive 1`] = `
Object {
  "buffer": "/**[n] * This is a code fence with all parts:[n] * [c][c][c]a language!   [n] *   some [c]code[c] here[n] * [c][c][c]   [n] */",
  "gaps": Array [],
  "lines": Array [
    "This is a code fence with all parts:",
    "[c][c][c]a language!",
    "  some [c]code[c] here",
    "[c][c][c]",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "This is a code fence with all parts:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
          Object {
            "kind": "FencedCode",
            "nodes": Array [
              Object {
                "kind": "Excerpt: FencedCode_OpeningFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Language",
                "nodeExcerpt": "a language!",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Code",
                "nodeExcerpt": "  some [c]code[c] here[n]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: FencedCode_ClosingFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`03 Code fence, positive 2`] = `
Object {
  "buffer": "/**[n] * This is a code fence with no language or trailing whitespace:[n] * [c][c][c][n] *   some [c]code[c] here[n] * [c][c][c]*/",
  "gaps": Array [],
  "lines": Array [
    "This is a code fence with no language or trailing whitespace:",
    "[c][c][c]",
    "  some [c]code[c] here",
    "[c][c][c]",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "This is a code fence with no language or trailing whitespace:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
          Object {
            "kind": "FencedCode",
            "nodes": Array [
              Object {
                "kind": "Excerpt: FencedCode_OpeningFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Language",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Code",
                "nodeExcerpt": "  some [c]code[c] here[n]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: FencedCode_ClosingFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 1`] = `
Object {
  "buffer": "/**[n] * Code fence incorrectly indented:[n] *    [c][c][c][n] */",
  "gaps": Array [],
  "lines": Array [
    "Code fence incorrectly indented:",
    "   [c][c][c]",
  ],
  "logMessages": Array [
    "(3,7): The opening backtick for a code fence must appear at the start of the line",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Code fence incorrectly indented:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "   ",
                  },
                ],
              },
              Object {
                "errorLocation": "[c][c][c]",
                "errorLocationPrecedingToken": "   ",
                "errorMessage": "The opening backtick for a code fence must appear at the start of the line",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 2`] = `
Object {
  "buffer": "/**[n] * Code fence not starting the line:[n] *a[c][c][c][n] */",
  "gaps": Array [],
  "lines": Array [
    "Code fence not starting the line:",
    "a[c][c][c]",
  ],
  "logMessages": Array [
    "(3,4): The opening backtick for a code fence must appear at the start of the line",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Code fence not starting the line:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "a",
                  },
                ],
              },
              Object {
                "errorLocation": "[c][c][c]",
                "errorLocationPrecedingToken": "a",
                "errorMessage": "The opening backtick for a code fence must appear at the start of the line",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 3`] = `
Object {
  "buffer": "/**[n] * Code fence not being terminated 1:[n] * [c][c][c]*/",
  "gaps": Array [],
  "lines": Array [
    "Code fence not being terminated 1:",
    "[c][c][c]",
  ],
  "logMessages": Array [
    "(3,4): Error parsing code fence: Missing closing delimiter",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Code fence not being terminated 1:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "",
                "errorLocationPrecedingToken": "
",
                "errorMessage": "Error parsing code fence: Missing closing delimiter",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 4`] = `
Object {
  "buffer": "/**[n] * Code fence not being terminated 2:[n] * [c][c][c] some stuff[n] */",
  "gaps": Array [],
  "lines": Array [
    "Code fence not being terminated 2:",
    "[c][c][c] some stuff",
  ],
  "logMessages": Array [
    "(3,4): Error parsing code fence: Missing closing delimiter",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Code fence not being terminated 2:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "",
                "errorLocationPrecedingToken": "
",
                "errorMessage": "Error parsing code fence: Missing closing delimiter",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " some stuff",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 5`] = `
Object {
  "buffer": "/**[n] * Language having backticks:[n] * [c][c][c] some stuff [c][c][c][n] */",
  "gaps": Array [],
  "lines": Array [
    "Language having backticks:",
    "[c][c][c] some stuff [c][c][c]",
  ],
  "logMessages": Array [
    "(3,4): Error parsing code fence: The language specifier cannot contain backtick characters",
    "(3,19): The opening backtick for a code fence must appear at the start of the line",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Language having backticks:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "[c]",
                "errorLocationPrecedingToken": " ",
                "errorMessage": "Error parsing code fence: The language specifier cannot contain backtick characters",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " some stuff ",
                  },
                ],
              },
              Object {
                "errorLocation": "[c][c][c]",
                "errorLocationPrecedingToken": " ",
                "errorMessage": "The opening backtick for a code fence must appear at the start of the line",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "[c][c][c]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 6`] = `
Object {
  "buffer": "/**[n] * Closing delimiter being indented:[n] * [c][c][c][n] * code[n] *      [c][c][c][n] */",
  "gaps": Array [],
  "lines": Array [
    "Closing delimiter being indented:",
    "[c][c][c]",
    "code",
    "     [c][c][c]",
  ],
  "logMessages": Array [
    "(5,4): The closing delimiter for a code fence must not be indented",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Closing delimiter being indented:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
          Object {
            "kind": "FencedCode",
            "nodes": Array [
              Object {
                "kind": "Excerpt: FencedCode_OpeningFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Language",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Code",
                "nodeExcerpt": "code[n]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "     ",
              },
              Object {
                "kind": "Excerpt: FencedCode_ClosingFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Code fence, negative 7`] = `
Object {
  "buffer": "/**[n] * Closing delimiter not being on a line by itself:[n] * [c][c][c][n] * code[n] * [c][c][c]  a[n] */",
  "gaps": Array [],
  "lines": Array [
    "Closing delimiter not being on a line by itself:",
    "[c][c][c]",
    "code",
    "[c][c][c]  a",
  ],
  "logMessages": Array [
    "(5,9): Unexpected characters after closing delimiter for code fence",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "Closing delimiter not being on a line by itself:",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
          Object {
            "kind": "FencedCode",
            "nodes": Array [
              Object {
                "kind": "Excerpt: FencedCode_OpeningFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Language",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "[n]",
              },
              Object {
                "kind": "Excerpt: FencedCode_Code",
                "nodeExcerpt": "code[n]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "",
              },
              Object {
                "kind": "Excerpt: FencedCode_ClosingFence",
                "nodeExcerpt": "[c][c][c]",
              },
              Object {
                "kind": "Excerpt: Spacing",
                "nodeExcerpt": "  ",
              },
            ],
          },
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "a",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
